<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_color"
        tools:context=".view.LoginActivity">

        <View
            android:id="@+id/view"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginBottom="64dp"
            android:background="@drawable/back_login_views"
            android:elevation="8dp"
            app:layout_constraintBottom_toTopOf="@+id/edtUsername"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/icon_login"
            android:elevation="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/view"
            app:layout_constraintEnd_toEndOf="@+id/view"
            app:layout_constraintStart_toStartOf="@+id/view"
            app:layout_constraintTop_toTopOf="@+id/view"
            app:srcCompat="@drawable/note" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginStart="64dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="64dp"
            android:background="@drawable/back_login_views"
            android:elevation="8dp"
            android:ems="10"
            android:fontFamily="@font/iran_yekan_mobile_bold"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLength="8"
            android:padding="10dp"
            android:textAlignment="center"
            android:textColor="@color/texts_color"
            android:textColorHint="@color/gray"
            android:textSize="@dimen/_20ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtUsername" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edtUsername"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginStart="64dp"
            android:layout_marginEnd="64dp"
            android:background="@drawable/back_login_views"
            android:elevation="8dp"
            android:fontFamily="@font/iran_yekan_mobile_bold"
            android:hint="@string/user_name"
            android:inputType="text"
            android:padding="10dp"
            android:textAlignment="center"
            android:textColor="@color/texts_color"
            android:textColorHint="@color/gray"
            android:textSize="@dimen/_20ssp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_enter"
            android:layout_width="180dp"
            android:layout_height="50dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/back_buttons"
            android:fontFamily="@font/iran_yekan_mobile_bold"
            android:text="@string/register"
            android:textColor="@color/white"
            android:textSize="@dimen/_20ssp"
            app:layout_constraintEnd_toEndOf="@+id/edtPassword"
            app:layout_constraintStart_toStartOf="@+id/edtPassword"
            app:layout_constraintTop_toBottomOf="@+id/edtPassword" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>